--- a/style.css
+++ b/style.css
@@ -11,3 +11,15 @@ body {
     background: #221f1f;
     color: #222;
 }
+.head{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 8%;
+    background: transparent;
+    z-index: 100;
+}
