--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
 }
 
 body {
-    background: #221f1f;
+    background: #eeeeee;
     color: #222;
 }
-.head{
+.head{/*  header section */
     position: fixed;
     top: 0;
     left: 0;
@@ -19,7 +19,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 8%;
+    padding: 5px 8%;
     background: transparent;
     z-index: 100;
+}
+.logo{
+    font-size: 25px;
+    color: #222;
+    font-weight: 600;
+    text-decoration: none;
 }
