--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 8%;
+    padding: 20px 8%;
     background: transparent;
     z-index: 100;
 }
@@ -28,4 +28,27 @@ body {
     color: #222;
     font-weight: 600;
     text-decoration: none;
+}
+.nav ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.nav ul li a{
+    color: #222;
+    margin: 0 25px;
+    text-decoration: none;
+    justify-content: space-between;
+    text-transform: capitalize;
+}
+
+.nav ul li a:hover,
+.nav ul li a.active{
+    color: #1743e3;
+    transition: .3s; 
 }
