--- a/style.css
+++ b/style.css
@@ -79,3 +79,10 @@ body {
 .social-meida a:hover{
     border-color: red;
 }
+.home{
+    width: 100%;
+    height:100vh;
+    display: flex;
+    align-items: center;
+    padding: 50px 8% 0;
+}
