--- a/style.css
+++ b/style.css
@@ -86,3 +86,21 @@ body {
     align-items: center;
     padding: 50px 8% 0;
 }
+.home-content{
+    width: 650px;
+}
+.home-content h1{
+    font-size: 50px;
+    line-height: 1.2;
+    text-transform: capitalize;
+    font-weight: 700;
+}
+.home-content h3{
+    font-size: 40px;
+    color: #1743e3;
+}
+
+.home-content p{
+    font-size: 20px;
+    margin: 15px 0 30px;
+}
