--- a/style.css
+++ b/style.css
@@ -104,3 +104,17 @@ body {
     font-size: 20px;
     margin: 15px 0 30px;
 }
+.home-content .btn{
+    display: inline-block;
+    padding: 10px 28px;
+    background: #1743e3;
+    border: 2px solid #1743e3;
+    color: #fff6f6;
+    text-decoration: none;
+    text-transform: capitalize;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
