--- a/style.css
+++ b/style.css
@@ -117,4 +117,9 @@ body {
     font-size: 16px;
     letter-spacing: 1px;
     font-weight: 600;
+    transition: .5s;
+}
+.btn:hover{
+    background: transparent;
+    color: #1743e3;
 }
