--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ body {
     border-color: #eeeeee;
 }
 .home{
+    position: relative;
     width: 100%;
     height:100vh;
     display: flex;
@@ -138,7 +139,7 @@ body {
     width: 100%;
     border: 25px solid #1743e3;
     transform: rotate(45deg);
-    background: transparent;
+    background: #eeeeee;
     box-shadow: -15px 15px 15px rgba(0, 0, 0, .5);
 }
 .home-img .box1 img {
@@ -151,9 +152,10 @@ body {
 .home .box2 {
     position: absolute;
     width: 650px;
-    height: 50px;
+    height: 650px;
     background: #1743e3;
-    top: -25px;
-    right: -25px;
+    top: -25%;
+    right: -25%;
     transform: rotate(45deg);
+    z-index: -1;
 }
