--- a/style.css
+++ b/style.css
@@ -44,10 +44,12 @@ body {
     display: inline-block;
     color: #222;
     margin: 0 25px;
+    font-size: 18px;
+    font-weight: 500; 
     text-decoration: none;
     justify-content: space-between;
     text-transform: capitalize;
-    animation: starttop 1s ease forwards;
+    animation: starttop .5s ease forwards;
     animation-duration: calc(.2s * var(--i));
 }
 
@@ -74,6 +76,8 @@ body {
     border:  1px solid transparent;
     transform:rotate(45deg);
     transition:.3s;
+    animation: startsoci 1s ease forwards;
+    animation-duration: calc(.2s * var(--i));
 }
 .social-meida a i{
     color: rgb(255, 255, 255);
@@ -185,5 +189,16 @@ body {
     100% {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes startsoci{
+    0% {
+        opacity: 0;
+        transform: translateX(100%) rotate(45deg);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0%) rotate(45deg);
     }
 }
