--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     text-decoration: none;
     justify-content: space-between;
     text-transform: capitalize;
-    animation: starttop .5s ease forwards;
+    animation: starttop 1s ease forwards;
     animation-duration: calc(.2s * var(--i));
 }
 
@@ -105,10 +105,14 @@ body {
     line-height: 1.2;
     text-transform: capitalize;
     font-weight: 700;
+    animation: startBottom 1s ease forwards;
+    /* animation-delay: 1s;  problem hoitese  */
 }
 .home-content h3{
     font-size: 40px;
     color: #1743e3;
+    animation: startRight 1s ease forwards;
+    animation-delay: 1.3s; 
 }
 
 .home-content p{
@@ -181,6 +185,17 @@ body {
     }
 }
 
+@keyframes startBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @keyframes starttop{
     0% {
         opacity: 0;
@@ -202,3 +217,4 @@ body {
         transform: translateX(0%) rotate(45deg);
     }
 }
+
