--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ body {
     text-decoration: none;
     justify-content: space-between;
     text-transform: capitalize;
-    animation: starttop 1s ease forwards;
-    animation-duration: calc(.2s * var(--i));
+    animation: starttop .5s ease forwards;
+    animation-duration: calc(.4s * var(--i));
 }
 
 .nav ul li a:hover,
@@ -75,9 +75,9 @@ body {
     text-decoration: none;
     border:  1px solid transparent;
     transform:rotate(45deg);
-    transition:.3s;
+    transition:.5s;
     animation: startsoci 1s ease forwards;
-    animation-duration: calc(.2s * var(--i));
+    animation-duration: calc(.6s * var(--i));
 }
 .social-meida a i{
     color: rgb(255, 255, 255);
@@ -105,12 +105,14 @@ body {
     line-height: 1.2;
     text-transform: capitalize;
     font-weight: 700;
+    opacity: 0;
     animation: startBottom 1s ease forwards;
-    /* animation-delay: 1s;  problem hoitese  */
+    animation-delay: 1s;  /*problem hoitese  */ 
 }
 .home-content h3{
     font-size: 40px;
     color: #1743e3;
+    opacity: 0;
     animation: startRight 1s ease forwards;
     animation-delay: 1.3s; 
 }
@@ -118,6 +120,9 @@ body {
 .home-content p{
     font-size: 20px;
     margin: 15px 0 30px;
+    opacity: 0;
+    animation: startleft 1s ease forwards;
+    animation-delay: 1.6s;
 }
 .home-content .btn{
     display: inline-block;
@@ -133,6 +138,9 @@ body {
     letter-spacing: 1px;
     font-weight: 600;
     transition: .5s;
+    opacity: 0;
+    animation: starttop 1s ease forwards;
+    animation-delay: 2s;
 }
 .btn:hover{
     background: transparent;
@@ -177,7 +185,7 @@ body {
 @keyframes startRight {
     0% {
         opacity: 0;
-        transform: translateX(-100%);
+        transform: translateX(-100px);
     }
     100% {
         opacity: 1;
@@ -188,22 +196,22 @@ body {
 @keyframes startBottom {
     0% {
         opacity: 0;
-        transform: translateY(-100%);
+        transform: translateY(-100px);
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateY(0px);
     }
 }
 
 @keyframes starttop{
     0% {
         opacity: 0;
-        transform: translateY(100%);
+        transform: translateY(100px);
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateY(0px);
     }
 }
 
@@ -217,4 +225,13 @@ body {
         transform: translateX(0%) rotate(45deg);
     }
 }
-
+@keyframes startleft{
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
