--- a/style.css
+++ b/style.css
@@ -161,6 +161,9 @@ body {
     transform: rotate(45deg);
     background: #eeeeee;
     box-shadow: -15px 15px 15px rgba(0, 0, 0, .5);
+    opacity: 0;
+    animation: zoomout 1s ease forwards;
+    animation-delay: 1.6s;
 }
 .home-img .box1 img {
     position: absolute;
@@ -233,5 +236,15 @@ body {
     100% {
         opacity: 1;
         transform: translateX(0px);
+    }
+}
+@keyframes zoomout{
+    0%{
+        transform: scale(1.1) rotate(45deg);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1) rotate(45deg);
+        opacity: 1;
     }
 }
