--- a/style.css
+++ b/style.css
@@ -184,6 +184,8 @@ body {
     right: -25%;
     transform: rotate(45deg);
     z-index: -1;
+    opacity: 0;
+    animation: left 1s ease forwards;
 }
 
 /* kyeframe startRight */
@@ -259,5 +261,15 @@ body {
     100% {
         opacity: 1;
         transform :translate(0, 0) scale(1) rotate(-45deg);
+    }
+}
+@keyframes left {
+    0% {
+        opacity: 0;
+        right: -40%;
+    }
+    100% {
+        opacity: 1;
+        right: -25%;
     }
 }
